[package]
name = "mdparser"
version = "0.1.0"
authors = ["oxifinch <joseph.stameus@gmail.com>"]
repository = "https://github.com/oxifinch/mdparser-js"
description = "A simple markdown to HTML converter."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
