[package]
name = "skalver-mdparser"
version = "0.1.0"
authors = ["oxifinch <oxifinch@protonmail.com>"]
repository = "https://github.com/oxifinch/skalver-mdparser"
description = "A simple markdown to HTML converter built for the Skalver web app."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
